Improve surefire arglines.